                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-04-2006 fixed: Unnessecary HEAD request to last.fm servers resulting in an error log
 - 27-04-2006 changed: removed old python copy-string from Build.bat since it's no longer needed
 - 27-04-2006 fixed: [ 1463526 ] shoutcast mp2 streaming broken
 - 27-04-2006 updated: python is updated to version 2.4.3 and now moved into a dll. Do not forget to update the system folder
 - 27-04-2006 fixed: [ 1475703 ] LCD and .xbe playing message
 - 27-04-2006 fixed: [ 1475843 ] Freezes with invalid call to xbmcCmds
 - 27-04-2006 fixed: Filemanager didn't show the number and size of the selected objects.
 - 25-04-2006 fixed: [ 1476206 ] zip files don't show subfolders in file manager
 - 25-04-2006 changed: Karaoke display now uses a linear texture (should be marginally faster + less memory)
 - 25-04-2006 changed: Removed mastercode settings from xboxmediacenter.xml - they're now only in the GUI.  Cleaned up the code + GUI look as well.
 - 25-04-2006 updated: Maltese language file (Thnx to michelbugeja)
 - 25-04-2006 changed: dvdplayer now uses xbmc filesystem for shout/http streams instead of it's own. means shoutcast information will be displayed for aacp streams
 - 25-04-2006 updated: dvdplayer ffmpeg to mplayerhq cvs and changed maxstreams to 42 instead of the standard 20 ( don't forget to update your system/dvdplayer dir )
 - 25-04-2006 fixed: directory/file date of iso discs was not read
 - 25-04-2006 updated: Italian language file (Thnx to kotix)
 - 25-04-2006 updated: Chinese (Simple) language file (Thnx to gamepc)
 - 25-04-2006 fixed: subtitles could end up disabled even if they where enabled in dvd menu